Solution for Day 9 part 1